# myGMM2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  meansquare.cpp  test.cpp
cuGmm/: CMakeLists.txt  comman.cu  comman.h  gpuGmm.cpp  gpuGmm.h
faiss/: CMakeLists.txt  Flat_test.cpp  faissST.cpp  testFaiss.cpp
kmeans_gmm/: CMakeLists.txt  KMeans-test.cpp  KMeans.cpp  KMeans.h  kmeans_main.cpp  opencvEM.cpp
myGmm/: CMakeLists.txt  myGMM.cpp  myGMM.h  utils.h  virgoGmm.cpp  virgoGmm.h
ort/: CMakeLists.txt  Onnx.cpp  Onnx.h  main.cpp
testscript/: CMakeLists.txt  malloc3D.cu  openGL.cpp  testmallocpich.cu  textTrue.cpp
threadPool/: CMakeLists.txt  mutextest.cpp  test.cpp  test2.cpp
